[project]
name = "toadui"
version = "0.1alpha"
description = "A basic library providing easy-to-use UI elements for use with OpenCV"
readme = "README.md"
authors = [
    { name = "eo" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21, <3.0",
    "opencv-python>=4.5, <5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
